examples/test/testpolicy13367.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13367
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key4: value49
      key18: value45
      key39: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value42
          key20: value47
          key14: value8
      podSelector:
        matchLabels:
          key26: value48
          key45: value34
          key22: value20
